<resources>
    <string name="app_name">Heroes Helper</string>
    <string name="create_floating_widget">Get Started!</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="dev_title">Dev Notes</string>

    <!-- v.x.y.z
        x is for any major update to app (new feature)
        y is for any design change
        z is for content changes, corrections
    -->
    <string name="last_updated">Last Updated: 26 Aug 2018 \nv5.5.23</string>
    <string name="aug_26_2018"> I apologize for the bug crashes and it taking me so long to fix. The Marine Corps has been keeping me busy. Here is what I got for you this time:
    \n\n** Bug fix. The app will no longer crash when you change from one color drop down to the next if you have a character far down the list selected.
    \n\n** A lot of people didn\'t like that I completely got rid of the X and made it a notification. You can now put the X back on the icon in the Settings tab. I apologize that
    I took that away to some who liked it. The notification will still remain regardless, however, if you X out of the icon using the on-screen X, the \"close icon\" and \"open icon\" won\'t do anything for you.
    \n\nI hope you all still enjoy the app. I am still trying to find the time to add screen recognition to the app. Please bare with me! Thanks again for the support!!</string>
    <string name="date2">26 August 2018</string>
    <string name="aug_10_2018">** NEW FEATURES!! **
        \n\n** Persistent Notification: The icon can now be closed and opened from the notification created once you "Get Started!" You can also open the app from the notification as well!
        \n\n** Icon size: Don\'t like how big the icon is on your screen? Now pick between Small, Medium, and Large sizes! **
        \n\n** We have now made it so you can change the rating of the hero without it resetting the information! Unit information that does not exist for that rating level will display \"n/a\".
        \n\n** The app now remembers what information you have displayed when you minimize down to the icon! Minimize the information and reopen it to be able to calculate the same character\'s IV
        \n\nWe hope you enjoy the new updates! Please continue to notify us of any issues you may have. We will do our best to correct it!</string>
    <string name="date1">10 August 2018</string>

    <string name="feedback">Submit Feedback</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="mail_feedback_email">motivationalapps2017@gmail.com</string>
    <string name="mail_feedback_subject">Feedback on your Heroes app</string>
    <string name="feedback_info">Like the app? Hate the app? Suggestions for the app? Is something incorrect in the app? Send us some feedback so we can make it better!</string>

    <string name="purchase">Remove Ads</string>
    <string name="close">Close</string>

    <string name="calc">Calculate IV</string>
    <string name="rating">Stars:</string>
    <string name="weapon">Weapon:</string>
    <string name="color">Color:</string>
    <string name="name">Name:</string>
    <string name="level">LVL</string>
    <string name="hp">HP</string>
    <string name="atk">Atk</string>
    <string name="spd">Spd</string>
    <string name="def">Def</string>
    <string name="res">Res</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="high">High</string>
    <string name="levelOne">Level 1</string>
    <string name="levelForty">Level 40</string>
    <string name="closeWindowDesc">Close current window</string>
    <string name="feedbackHint">Your Message</string>
    <string name="recommended">Recommended IV\'s:</string>
    <string name="recommended_stat">Recommended IV</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes:</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="theme_title">Enable Dark Mode</string>
    <string name="theme_summary">Switch to a Dark Theme</string>
    <string name="action_settings">Settings</string>
    <string name="hand_title">Left handed?</string>
    <string name="hand_summary">Switch the icon to appear on the left side of the screen</string>
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Close the icon via notification instead of the X</string>
    <string name="channel_name">Persistent Notification</string>
    <string name="channel_description">Notification in order to close the app</string>
    <string name="icon_size_title">Set the Icon Size</string>
    <string name="icon_size_description">Tap here to change the icon size. \n(Closing expanded view updates icon size)</string>
    <string name="close_icon_title">Display the X on icon</string>
    <string name="close_icon_summary">Do you want the X back on the icon?</string>

    <string-array name="rating_stars">
        <item>&#9733; &#9733; &#9733; &#9733; &#9733;</item>
        <item>&#9733; &#9733; &#9733; &#9733;</item>
        <item>&#9733; &#9733; &#9733;</item>
    </string-array>

    <string-array name="weapons">
        <item>Equipped</item>
        <item>Not Equipped</item>
    </string-array>

    <string-array name="colors">
        <item>Blue</item>
        <item>Colorless</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>

    <string-array name="rating_colors">
        <item>#FFD700</item>
        <item>#E6E8FA</item>
        <item>#8C7853</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string-array name="icon_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>


</resources>
