<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="theme_switch"
        android:summary="@string/theme_summary"
        android:title="@string/theme_title" />
    <!--<ListPreference
        android:key="transparent_preference"
        android:title="@string/opacity"
        android:summary="@string/opacity_summary"
        android:inputType="number"
        android:entries="@array/opacity_array"
        android:entryValues="@array/opacity_values"
        android:defaultValue="255"/>-->

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="hand_switch"
        android:summary="@string/hand_summary"
        android:title="@string/hand_title" />

    <ListPreference
        android:key="icon_size"
        android:title="@string/icon_size_title"
        android:summary="@string/icon_size_description"
        android:entries="@array/icon_sizes"
        android:entryValues="@array/icon_sizes"
        android:defaultValue="70dp"/>

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="close_icon"
        android:summary="@string/close_icon_summary"
        android:title="@string/close_icon_title"/>

    <!--<android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="notification_switch"
        android:summary="@string/notification_summary"
        android:title="@string/notification_title" />-->

</PreferenceScreen>