<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <!--  Button to trigger Floating Widget Service -->
    <Button
        android:id="@+id/create_floating_widget"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_background"
        android:onClick="createFloatingWidget"
        android:text="@string/create_floating_widget"
        android:textColor="@color/text_color_light"
        android:textSize="20sp"/>

    <!--Button to submit feedback -->
    <!--<Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="sendFeedback"
        android:textColor="@color/text_color2"
        android:background="@drawable/button_background"
        android:text="@string/feedback"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/create_floating_widget"/>-->

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="settings"
        android:background="@drawable/button_background"
        android:text="@string/settings"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/create_floating_widget"/>

    <Button
        android:id="@+id/dev_notes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="devPage"
        android:background="@drawable/button_background"
        android:text="@string/dev_title"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/settings"/>

    <TextView
        android:id="@+id/last_updated"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/last_updated"
        android:textAlignment="center"
        android:textColor="@android:color/black" />
</RelativeLayout>

